# rust-axum-backend

./: Cargo.toml  README.md
docs/: 01-architecture-overview.md  02-project-structure.md  03-rust-fundamentals.md  05-error-handling.md  06-middleware-layers.md  12-common-patterns.md  README.md  STATUS.md
src/: ctx.rs  error.rs  log.rs  main.rs  model.rs
src/web/: mw_auth.rs  routes_login.rs  routes_ticket.rs
tests/: quick_dev.rs
