[package]
name = "rust-axum-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
axum = { version = "0.8.6", features = ["macros"] }
lazy-regex = "3.4.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_with = "3.15.0"
strum_macros = "0.27.2"
tokio = { version = "1.47.1", features = ["full"] }
tower-cookies = "0.11.0"
tower-http = { version = "0.6.6", features = ["fs"] }
uuid = { version = "1.18.1", features = ["v4", "fast-rng"] }

[dev-dependencies]
anyhow = "1.0.100"
httpc-test = "0.1.10"
